# collatz

./: collatz.cabal
app/: Main.hs
src/: Collatz.hs
